fix: docs content overflow (#4376)

--- a/src/styles/doc-content.css
+++ b/src/styles/doc-content.css
@@ -198,7 +198,7 @@
         @apply px-0;
 
         > code {
-          @apply inline-block w-full px-6 py-1.5 !leading-relaxed;
+          @apply inline-block w-full px-6 py-1.5 !leading-relaxed wrap-anywhere;
         }
       }
 
@@ -210,7 +210,7 @@
     }
 
     :not(pre) > code {
-      @apply !rounded-sm bg-gray-new-94 !px-1.5 !py-0.5 !font-mono !font-normal !text-black-new dark:bg-gray-new-15 dark:!text-white;
+      @apply break-words !rounded-sm bg-gray-new-94 !px-1.5 !py-0.5 !font-mono !font-normal !text-black-new dark:bg-gray-new-15 dark:!text-white;
 
       &::before,
       &::after {
